@@ -386,6 +386,9 @@ CMaskNotGate::inGate(CEvent& rEvent, const vector<UInt_t>& Params)
 Bool_t
 CMaskNotGate::inGate(CEvent& rEvent)
 {
+  if (!rEvent[m_nId].isValid()) { // short circuit to false if param not set.
+    return kfFALSE;		
+  }
   long value = rEvent[m_nId];
   unsigned long comp = ~m_cCompare;
   if ((value & comp) == comp )
